syntax = "proto3";

option go_package = "./proto";

import "types.proto";

service TeamService {
    rpc CreateTeam (CreateTeamRequest) returns (CreateTeamResponse) {}
    rpc JoinTeam (JoinTeamRequest) returns (JoinTeamResponse) {}
}

message CreateTeamRequest {
    Team data = 2;
}

message JoinTeamRequest {
    string teamId = 2;
}

message CreateTeamResponse {
    bool success = 1;
    Team data = 2;
}

message JoinTeamResponse {
    bool success = 1;
}
